<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textAppearance="?android:attr/textAppearanceLarge" android:padding="5dp"/>

    <Button
        android:id="@+id/btn_share_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/share_facebook"/>

    <Button
        android:id="@+id/btn_share_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/share_twitter"/>

    <Button
        android:id="@+id/btn_share_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_flickr" />

    <Button
        android:id="@+id/btn_share_option"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/share_more"/>

</LinearLayout>