<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:background="#000000"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/aboutHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:padding="0dip"
            android:visibility="visible">

            <ImageView
                android:id="@+id/AppIcon"
                android:layout_centerVertical="true"
                android:padding="2dip"
                android:layout_margin="2dip"
                android:src="@drawable/icon"
                android:layout_marginTop="0dip"
                android:layout_width="45dip"
                android:layout_height="45dip" />

            <TextView
                android:id="@+id/AboutAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/AppIcon"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:layout_marginLeft="6dip"
                android:layout_marginTop="6dip"
                android:textColor="#252525"
                android:textSize="16dip"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/AboutAppByline"
                android:text="by Zmo Software"
                android:layout_toRightOf="@+id/AppIcon"
                android:layout_below="@id/AboutAppName"
                android:gravity="center_horizontal"
                android:layout_marginLeft="8dip"
                android:layout_marginBottom="8dip"
                android:textSize="10dip"
                android:textColor="#000000"
                android:typeface="sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/VersionText"
            android:text=""
            android:textSize="12dip"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="sans"
            android:padding="10dip"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/NoticeText"
            android:text="@string/txtupgradenotice"
            android:textSize="16dip"
            android:textColor="#ffffff"
            android:typeface="sans"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ButtonContact"
            android:text="@string/txtcontactus"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dip"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ButtonUpgradeFree"
            android:text="@string/txtupgradefree"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dip"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ButtonUpgrade"
            android:text="@string/txtupgrade"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dip"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>